# medium-resources

./: pip_install.sh  pyproject.toml  requirements.txt
NER_BERT/: NER_with_BERT.ipynb
Text_Classification_BERT/: bert_medium.ipynb
